LATEST
-------------------------------

ili2fme 7.0.6 (2020-02-03)
-------------------------------
- ili2c-5.0.6
- iox-ili-1.20.17

ili2fme 7.0.5 (2020-01-31)
-------------------------------
- ili2c-5.0.5
- iox-ili-1.20.16

ili2fme 7.0.4 (2019-11-08)
-------------------------------
- ili2c-5.0.3
- iox-ili-1.20.14

ili2fme 7.0.3 (2019-09-06)
-------------------------------
- ili2c-5.0.2
- iox-ili-1.20.13

ili2fme 7.0.2 (2019-08-28)
-------------------------------
- fix ClassCastException: ch.ehi.iox.adddefval.ItfAddDefValueReader in Ili2Reader.myread()
- fix missing raw main table features (*_MT)
- switch validator to ITF raw mode if ILI1_LINETABLES=Raw

ili2fme 7.0.1 (2019-08-23) BETA
-------------------------------
- filter baskets (topic filter) in IoxReader
- implement linetable reading
- integrated ilivalidator
- ili2c-5.0.1
- iox-ili-1.20.12

ili2fme 7.0.0 (2019-07-05) BETA
-------------------------------
- refactored polygon building
- new Reader option to select linetable mapping: ILI1_LINETABLES (Polygon, Raw, Polygon+Raw) 

ili2fme 6.3.0 (2019-04-24)
--------------------------
- ili2c-5.0.0
- iox-ili-1.20.11

ili2fme 6.2.3 (2018-12-09)
--------------------------
- ili2c-4.7.11
- iox-ili 1.20.10

ili2fme 6.2.2 (2018-05-17)
--------------------------
- ili2c-4.7.7
- iox-ili 1.20.2
- hide Base-Name of RenamedViewableRef
- support implicit attribute type in ViewDef

ili2fme 6.2.1 (2017-10-20)
--------------------------
- ili2c-4.7.4
- iox-ili 1.19.8


ili2fme 6.2.0 (2017-08-15)
--------------------------
- link with pluginbuilder.jar of FME 2017.1
- replaced setBinaryAttribute() with setByteArrayAttribute() to avoid platform default charset dependency
- replaced getBinaryAttribute() with getByteArrayAttribute() to avoid platform default charset dependency
- replaced deprecated geometryTools() with getGeometryTools()
- ili2c-4.7.3
- iox-ili-1.13.6

ili2fme 6.1.5 (2016-11-02)
--------------------------