@@ -1,7 +1,3 @@
-#Mon, 02 Mar 2020 10:33:09 +0100
-#Wed Feb 02 15:55:13 CET 2011
-versionMicro=7
-versionMinor=0
-versionBranch=
-versionDate=20200302
-versionMajor=7
+#Wed Mar 25 15:29:20 CET 2020
+version=7.0.7-SNAPSHOT
+versionCommit=45e5dbb36498541f4173ea11684a0137cd1a6f1c
