@@ -1,5 +1,6 @@
 LATEST
 -------------------------------
+- switch build tool to gradle
 
 ili2fme 7.0.6 (2020-02-03)
 -------------------------------
